# plant_disease

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.bin/: dev  prod
back/: constants.py  main.py  model.py  utils.py
deploy/: Dockerfile  postgresql.conf  requirements.txt
front/plant/: package-lock.json  package.json
front/plant/public/: index.html
front/plant/src/: App.css  App.js
