[tool.poetry]
name = "plant-disease"
version = "0.1.0"
description = ""
authors = ["Roman Korolev <kash244@yandex.ru>"]
readme = "README.md"
packages = [{include = "plant_disease"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.2"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
pillow = "^10.2.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
pre-commit = "^3.6.2"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
